--- a/NYCSchools/Base.lproj/Main.storyboard
+++ b/NYCSchools/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="376" height="134.66666666666666"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYA-Mk-ust">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYA-Mk-ust">
                                             <rect key="frame" x="132" y="11" width="236" height="48"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="48" id="Lvc-eo-GzW"/>
@@ -34,7 +34,7 @@
                                             <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="F1W-9N-0oD">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="F1W-9N-0oD">
                                             <rect key="frame" x="20" y="25" width="104" height="92"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="104" id="M0j-Wn-fqs"/>
@@ -77,7 +77,6 @@
                                     <outlet property="nameLbl" destination="ZYA-Mk-ust" id="sOt-c2-zQm"/>
                                     <outlet property="ratingLbl" destination="s7K-Ib-wKH" id="eUj-qv-7Qi"/>
                                     <outlet property="thumbnailImgV" destination="F1W-9N-0oD" id="4OR-jY-OaL"/>
-                                    <segue destination="p8h-NF-iZ2" kind="show" identifier="MenuId" id="5a8-KS-voq"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -86,11 +85,10 @@
                             <outlet property="delegate" destination="xhr-Ia-nUe" id="YwP-Cj-a0y"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Restaurants" id="DBg-pu-3XU">
-                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="5Qx-Fu-vHv">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Restaurants" id="DBg-pu-3XU"/>
+                    <connections>
+                        <segue destination="p8h-NF-iZ2" kind="show" identifier="MenuId" id="5vA-YE-GDr"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfW-Yr-OXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -112,13 +110,13 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="332.66666666666669"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mz-EA-HtT">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Name" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mz-EA-HtT">
                                             <rect key="frame" x="16" y="11" width="378" height="21"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJL-uj-1dj">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJL-uj-1dj">
                                             <rect key="frame" x="16" y="266" width="378" height="15"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="15" id="PJf-Zc-NQd"/>
@@ -130,7 +128,7 @@
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kqd-tt-gGe">
                                             <rect key="frame" x="16" y="40" width="378" height="218"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desc" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3w-pq-mRg">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3w-pq-mRg">
                                             <rect key="frame" x="16" y="289" width="378" height="39"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="39" id="dY7-5h-67V"/>
@@ -338,6 +336,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Placeholder" width="300" height="250"/>
         <image name="film" width="30" height="30"/>
         <image name="fork-knife" width="30" height="30"/>
     </resources>
